--- a/QuestPackages/daily/farming/package.yml
+++ b/QuestPackages/daily/farming/package.yml
@@ -27,6 +27,8 @@ menus:
           - $daily-farming-bamboo.title$
           - $daily-farming-bamboo.description_line_1$
           - $daily-farming-bamboo.description_line_2$
+          - $daily-farming-bamboo.shrine_line_1$
+          - $daily-farming-bamboo.shrine_line_2$
           - 
           - $status.notStarted$
           - $action.start$
@@ -40,6 +42,8 @@ menus:
           - $daily-farming-bamboo.title$
           - $daily-farming-bamboo.description_line_1$
           - $daily-farming-bamboo.description_line_2$
+          - $daily-farming-bamboo.shrine_line_1$
+          - $daily-farming-bamboo.shrine_line_2$
           - 
           - $status.inProgress$
           - "%daily-farming-bamboo.objective.collect.absoluteAmount%/%daily-farming-bamboo.objective.collect.absoluteTotal%"
@@ -71,6 +75,8 @@ menus:
           - $daily-farming-beetroot.title$
           - $daily-farming-beetroot.description_line_1$
           - $daily-farming-beetroot.description_line_2$
+          - $daily-farming-beetroot.shrine_line_1$
+          - $daily-farming-beetroot.shrine_line_2$
           - 
           - $status.notStarted$
           - $action.start$
@@ -84,6 +90,8 @@ menus:
           - $daily-farming-beetroot.title$
           - $daily-farming-beetroot.description_line_1$
           - $daily-farming-beetroot.description_line_2$
+          - $daily-farming-beetroot.shrine_line_1$
+          - $daily-farming-beetroot.shrine_line_2$
           - 
           - $status.inProgress$
           - "%daily-farming-beetroot.objective.collect.absoluteAmount%/%daily-farming-beetroot.objective.collect.absoluteTotal%"
@@ -115,6 +123,8 @@ menus:
           - $daily-farming-cactus.title$
           - $daily-farming-cactus.description_line_1$
           - $daily-farming-cactus.description_line_2$
+          - $daily-farming-cactus.shrine_line_1$
+          - $daily-farming-cactus.shrine_line_2$
           - 
           - $status.notStarted$
           - $action.start$
@@ -128,6 +138,8 @@ menus:
           - $daily-farming-cactus.title$
           - $daily-farming-cactus.description_line_1$
           - $daily-farming-cactus.description_line_2$
+          - $daily-farming-cactus.shrine_line_1$
+          - $daily-farming-cactus.shrine_line_2$
           - 
           - $status.inProgress$
           - "%daily-farming-cactus.objective.collect.absoluteAmount%/%daily-farming-cactus.objective.collect.absoluteTotal%"
@@ -159,6 +171,8 @@ menus:
           - $daily-farming-carrot.title$
           - $daily-farming-carrot.description_line_1$
           - $daily-farming-carrot.description_line_2$
+          - $daily-farming-carrot.shrine_line_1$
+          - $daily-farming-carrot.shrine_line_2$
           - 
           - $status.notStarted$
           - $action.start$
@@ -172,6 +186,8 @@ menus:
           - $daily-farming-carrot.title$
           - $daily-farming-carrot.description_line_1$
           - $daily-farming-carrot.description_line_2$
+          - $daily-farming-carrot.shrine_line_1$
+          - $daily-farming-carrot.shrine_line_2$
           - 
           - $status.inProgress$
           - "%daily-farming-carrot.objective.collect.absoluteAmount%/%daily-farming-carrot.objective.collect.absoluteTotal%"
@@ -203,6 +219,8 @@ menus:
           - $daily-farming-melon.title$
           - $daily-farming-melon.description_line_1$
           - $daily-farming-melon.description_line_2$
+          - $daily-farming-melon.shrine_line_1$
+          - $daily-farming-melon.shrine_line_2$
           - 
           - $status.notStarted$
           - $action.start$
@@ -216,6 +234,8 @@ menus:
           - $daily-farming-melon.title$
           - $daily-farming-melon.description_line_1$
           - $daily-farming-melon.description_line_2$
+          - $daily-farming-melon.shrine_line_1$
+          - $daily-farming-melon.shrine_line_2$
           - 
           - $status.inProgress$
           - "%daily-farming-melon.objective.collect.absoluteAmount%/%daily-farming-melon.objective.collect.absoluteTotal%"
@@ -247,6 +267,8 @@ menus:
           - $daily-farming-potato.title$
           - $daily-farming-potato.description_line_1$
           - $daily-farming-potato.description_line_2$
+          - $daily-farming-potato.shrine_line_1$
+          - $daily-farming-potato.shrine_line_2$
           - 
           - $status.notStarted$
           - $action.start$
@@ -260,6 +282,8 @@ menus:
           - $daily-farming-potato.title$
           - $daily-farming-potato.description_line_1$
           - $daily-farming-potato.description_line_2$
+          - $daily-farming-potato.shrine_line_1$
+          - $daily-farming-potato.shrine_line_2$
           - 
           - $status.inProgress$
           - "%daily-farming-potato.objective.collect.absoluteAmount%/%daily-farming-potato.objective.collect.absoluteTotal%"
@@ -291,6 +315,8 @@ menus:
           - $daily-farming-pumpkin.title$
           - $daily-farming-pumpkin.description_line_1$
           - $daily-farming-pumpkin.description_line_2$
+          - $daily-farming-pumpkin.shrine_line_1$
+          - $daily-farming-pumpkin.shrine_line_2$
           - 
           - $status.notStarted$
           - $action.start$
@@ -304,6 +330,8 @@ menus:
           - $daily-farming-pumpkin.title$
           - $daily-farming-pumpkin.description_line_1$
           - $daily-farming-pumpkin.description_line_2$
+          - $daily-farming-pumpkin.shrine_line_1$
+          - $daily-farming-pumpkin.shrine_line_2$
           - 
           - $status.inProgress$
           - "%daily-farming-pumpkin.objective.collect.absoluteAmount%/%daily-farming-pumpkin.objective.collect.absoluteTotal%"
@@ -335,6 +363,8 @@ menus:
           - $daily-farming-sugarcane.title$
           - $daily-farming-sugarcane.description_line_1$
           - $daily-farming-sugarcane.description_line_2$
+          - $daily-farming-sugarcane.shrine_line_1$
+          - $daily-farming-sugarcane.shrine_line_2$
           - 
           - $status.notStarted$
           - $action.start$
@@ -348,6 +378,8 @@ menus:
           - $daily-farming-sugarcane.title$
           - $daily-farming-sugarcane.description_line_1$
           - $daily-farming-sugarcane.description_line_2$
+          - $daily-farming-sugarcane.shrine_line_1$
+          - $daily-farming-sugarcane.shrine_line_2$
           - 
           - $status.inProgress$
           - "%daily-farming-sugarcane.objective.collect.absoluteAmount%/%daily-farming-sugarcane.objective.collect.absoluteTotal%"
@@ -379,6 +411,8 @@ menus:
           - $daily-farming-sweetberry.title$
           - $daily-farming-sweetberry.description_line_1$
           - $daily-farming-sweetberry.description_line_2$
+          - $daily-farming-sweetberry.shrine_line_1$
+          - $daily-farming-sweetberry.shrine_line_2$
           - 
           - $status.notStarted$
           - $action.start$
@@ -392,6 +426,8 @@ menus:
           - $daily-farming-sweetberry.title$
           - $daily-farming-sweetberry.description_line_1$
           - $daily-farming-sweetberry.description_line_2$
+          - $daily-farming-sweetberry.shrine_line_1$
+          - $daily-farming-sweetberry.shrine_line_2$
           - 
           - $status.inProgress$
           - "%daily-farming-sweetberry.objective.collect.absoluteAmount%/%daily-farming-sweetberry.objective.collect.absoluteTotal%"
@@ -423,6 +459,8 @@ menus:
           - $daily-farming-wheat.title$
           - $daily-farming-wheat.description_line_1$
           - $daily-farming-wheat.description_line_2$
+          - $daily-farming-wheat.shrine_line_1$
+          - $daily-farming-wheat.shrine_line_2$
           - 
           - $status.notStarted$
           - $action.start$
@@ -436,6 +474,8 @@ menus:
           - $daily-farming-wheat.title$
           - $daily-farming-wheat.description_line_1$
           - $daily-farming-wheat.description_line_2$
+          - $daily-farming-wheat.shrine_line_1$
+          - $daily-farming-wheat.shrine_line_2$
           - 
           - $status.inProgress$
           - "%daily-farming-wheat.objective.collect.absoluteAmount%/%daily-farming-wheat.objective.collect.absoluteTotal%"
