change raw minerals to ingots, fix wording in gui regarding the shrine chest

--- a/QuestPackages/daily/farming/sweetberry/package.yml
+++ b/QuestPackages/daily/farming/sweetberry/package.yml
@@ -18,7 +18,7 @@ variables:
   target_upper: Sweet berries
   
   target_drops: sweet_berries
-  target_drops_plural: sweet_berries
+  target_drops_plural: sweet berries
   
   target_slug: sweet_berry_bush
   
